Completed admin API controller with unit tests
